# construct-yourself

./: .gitignore  GADTParser.hs  LICENSE  README.md  construct-yourself.cabal
src/: Construction.hs  Tasks.hs
src/Construction/Internal/: Functions.hs  Parser.hs  TypeFunctions.hs  Types.hs
src/Tasks/GADT_1/: GADTExpr.hs  GADTParser.hs
test/: ParseSpec.hs  Spec.hs  Task1Spec.hs
