name:                construct-yourself
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ozzzzz/construct-yourself#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2017, BIOCAD CBD
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable construct-yourself-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , construct-yourself
  default-language:    Haskell2010

test-suite construct-yourself-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , construct-yourself
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ozzzzz/construct-yourself
