name:                construct-yourself
version:             0.1.0.0
synopsis:            Template to make construction theory by yourself
description:
  Template to make construction theory by yourself
homepage:            https://github.com/ozzzzz/construct-yourself#readme
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2017, BIOCAD CBD
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Construction
                     , Tasks
  other-modules:       Construction.Internal.Types
                     , Construction.Internal.Functions
                     , Construction.Internal.Parser
                     
                     , Tasks.GADT_1.GADTExpr
                     , Tasks.GADT_1.GADTParser
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , containers
  default-language:    Haskell2010

executable construct
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , construct-yourself
  default-language:    Haskell2010

test-suite construct-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , construct-yourself
                     , QuickCheck
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ParseSpec.hs
  build-depends:       base
                     , construct-yourself
                     , QuickCheck
                     , hspec
                     , containers
                     , parsec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite task1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Task1Spec.hs
  build-depends:       base
                     , construct-yourself
                     , QuickCheck
                     , hspec
                     , containers
                     , parsec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ozzzzz/construct-yourself
